Fix grid layout so programming skills section stays visible
Changed #name and #contacts grid-row from fixed span (2/5) to
dynamic span (2/-1) so they extend to match content height.

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ header{
 
 #name{
     grid-column: 6 / 7;
-    grid-row: 2/5;
+    grid-row: 2 / -1;
     writing-mode: vertical-lr;
     font-size: 500%;
     border: solid black;
@@ -93,10 +93,10 @@ header{
 
 #contacts{
     grid-column: 1 / 3;
-    grid-row: 2 / 5; 
+    grid-row: 2 / -1;
     padding: 10%;
     border: solid black;
-    border-radius: 5px;    
+    border-radius: 5px;
 }
 
 #contacts i{
